# centerdash-api

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/helpers/: mod.rs  timestamp.rs  token.rs
src/models/: account.rs  user.rs
src/routes/: login.rs  mod.rs  player_top.rs  register.rs  verify.rs
