[package]
name = "centerdash-api"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
serde = "1.0"
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "8.3"
dotenv = "0.15"
reqwest = "0.11"
env_logger = "0.10"
actix-cors = "0.6.4"
